# Weld-Defect-Detection-

./: .env.example  .gitignore  ARCHITECTURE.md  FIXES_SUMMARY.md  LICENSE  META_LEARNING_SUMMARY.md  Makefile  NEW_REPO_MIGRATION.md  NEW_REPO_README.md  NEW_REPO_REQUIREMENTS.txt  README.md  SETUP_GUIDE.md  environment.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
agents/: __init__.py  base.py  coordinator.py  executioner.py  market_scout.py  performance_analyst.py  risk_officer.py  signal_engineer.py  strategy_planner.py
app/: __init__.py  config.py  main.py
conf/: production.yaml  quick_test.yaml  train.yaml
config/: risk_policies.yaml  settings.yaml  strategies.yaml
dashboards/: streamlit_app.py
data_providers/: __init__.py  base.py  flow_quiverquant.py  market_yfinance.py  options_tradier.py
exec/: __init__.py  ibkr_adapter.py  paper_broker.py
graphs/: __init__.py  trading_graph.py
job_assistant/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
notebooks/: backtest_iron_condor.ipynb
risk/: __init__.py  constraints.py  var.py
scripts/: example_usage.py  init_db.py  quick_start.py  train_pipeline.py  validate_meta_learning.py
src/: __init__.py
storage/: __init__.py  db.py  models.py  portfolio.py  vectorstore.py
strategies/: __init__.py  base.py  iron_condor.py  long_straddle.py  wheel.py
tests/: __init__.py  test_risk.py  test_strategies.py
(+85 files in other folders)
